--- a/UdongZip/src/main/webapp/WEB-INF/web.xml
+++ b/UdongZip/src/main/webapp/WEB-INF/web.xml
@@ -52,5 +52,10 @@
 		<filter-name>encodingFilter</filter-name>
 		<url-pattern>/*</url-pattern>
 	</filter-mapping>
+		
+	<error-page>
+		<error-code>403</error-code>
+		<location>/views/common/error.jsp</location>
+	</error-page>
 
 </web-app>
